# qwen-bpy-ft

./: .env.example  .gitignore  README.md  pyproject.toml  results_ft_qwen7b_20260330T225757.json
configs/data_collection/: default.yaml
configs/evaluation/: base_model.yaml  default.yaml  finetuned_3b.yaml  finetuned_7b.yaml  openai.yaml
configs/training/: qwen3_sft_4b.yaml  qwen_sft.yaml  qwen_sft_4b.yaml
data/eval/: prompts.jsonl
data_collection/: conversation.py  executor.py  generator.py  pipeline.py  prompt_templates.py  quality_gate.py  scene_verifier.py  schemas.py
evaluation/: compare.py  infer.py  metrics.py  pipeline.py  render.py  schemas.py
results_ft_qwen7b_20260330T225757_scripts/: eval_003_s0_pass.py  eval_003_s1_pass.py  eval_003_s2_pass.py  eval_003_s3_pass.py  eval_003_s4_pass.py  eval_005_s0_pass.py  eval_005_s1_pass.py  eval_005_s2_pass.py  eval_005_s3_pass.py  eval_005_s4_pass.py
scripts/: collect.sh  compare.sh  eval.sh  eval_all.sh  extract_scripts.py  prepare.sh  render.sh  serve_3b.sh  serve_7b.sh  serve_qwen3_4b.sh  setup_serve_venv.sh  setup_training_venv.sh  train.sh  verify_env.sh
shared/: blender_runner.py  config.py  logging_utils.py
training/: prepare_dataset.py  train.py
