[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "moonlake"
version = "0.1.0"
description = "Blender scene generation via finetuned VLM producing bpy programs"
requires-python = ">=3.10"
dependencies = [
    # Data collection
    "openai>=1.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tenacity>=8.0",
    "tqdm>=4.0",
    "PyYAML>=6.0",
    # Training (LLaMA-Factory installed separately on cluster)
    # Inference serving
    "vllm>=0.4",
    # Evaluation
    "torch>=2.1",
    "transformers>=4.45.0,<=4.52.4,!=4.52.0",
    "accelerate>=0.28",
    "datasets>=2.18",
    # CLIP eval
    "open-clip-torch>=2.24",
    "Pillow>=10.0",
    # Utils
    "rich>=13.0",
    "jsonlines>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
moonlake-collect = "data_collection.pipeline:main"
moonlake-prepare  = "training.prepare_dataset:main"
moonlake-train    = "training.train:main"
moonlake-eval     = "evaluation.pipeline:main"

[tool.setuptools.packages.find]
include = ["shared*", "data_collection*", "training*", "evaluation*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
